# nonebot-01

./: .pdm-python  LICENSE  README.md  pyproject.toml
bot01/plugins/foo/: __init__.py
